Fixed navbar top and navbar footer. (Some styling and perhaps collapse toggling problem in big resolution to do.)

--- a/src/main/webapp/css/agency.css
+++ b/src/main/webapp/css/agency.css
@@ -113,7 +113,8 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+title {
     text-transform: uppercase;
     font-family: Futura, Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
@@ -1093,4 +1094,31 @@ img::selection {
 
 img::-moz-selection {
     background: 0 0;
+}
+
+.navbar-fixed-bottom {
+/*    margin-bottom: -1em;*/
+    height: 1.2em;
+}
+
+.navbar-header > .navbar-right {
+    float: right;
+    clear: left;
+    margin-top: 0.7em;
+}
+
+.navbar-brand {
+    white-space: nowrap;
+    box-sizing: border-box ;
+}
+
+.refreshButton {
+    clear: left;
+}
+
+.navbar-collapse.in,
+.navbar-collapse.collapsing,
+.collapse {
+    /*clear: left;*/
+    width: 98%;
 }
